# gnu-autotools-skeleton

./: .gitignore  Makefile.am  README.md  config.h  configure.ac
src/: Makefile.am  main.cpp
